--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "run": "nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "html",
@@ -42,5 +42,8 @@
     "multer-gridfs-storage": "^5.0.1",
     "path": "^0.12.7",
     "validator": "^13.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
